flow-server/k8s/dev/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: flow-server
    namespace: default
spec:
    selector:
        matchLabels:
            app: flow-server
    replicas: 1
    template:
        metadata:
            labels:
                app: flow-server
        spec:
            containers:
                - name: flow-server
                  image: 175329446102.dkr.ecr.ap-northeast-2.amazonaws.com/flow-server:1.0.0
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 8080
                  resources:
                      requests:
                          cpu: 500m
                          memory: 2Gi
                  readinessProbe:
                      httpGet:
                          path: /health_check.html
                          port: 8080
                      initialDelaySeconds: 5
                      periodSeconds: 10
                  livenessProbe:
                      httpGet:
                          path: /health_check.html
                          port: 8080
                      initialDelaySeconds: 15
                      periodSeconds: 20
