flow-server/k8s/dev/service.yml
---
apiVersion: v1
kind: Service
metadata:
    labels:
        app: flow-server
    name: flow-server
    namespace: default
spec:
    ports:
        - name: 8080-8080
          port: 8080
          protocol: TCP
          targetPort: 8080
    selector:
        app: flow-server
    type: ClusterIP
